# task-hap-counter

./: .gitignore  README.md  environment.yml  pyproject.toml  run-test-data.sh
src/hap_counter/: __init__.py  cli.py  counting.py  save_to_tsv.py
test_data/: giab_2023.05.hg002.wf_snp.chr16_28000000_29000000.snv_counts.tsv
tests/: conftest.py  test_counter.py
tests/test_output/: snv_counts_no_haplotypes.tsv  snv_counts_with_haplotypes.tsv  snvs.vcf
