[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hap-counter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hap_counter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
